--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,4 +23,128 @@ html {
 body {
   font-family: "Work Sans", sans-serif;
 }
+
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+/* Small */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
 /* End Global Rules */
+
+/* Start Header */
+header {
+  padding: 20px;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .logo {
+  width: 75px;
+}
+
+header .links {
+  position: relative;
+  cursor: pointer;
+}
+
+header .links:hover .icon span:nth-child(2) {
+  width: 100%;
+}
+
+header .links:hover .icon span {
+  background-color: var(--main-color);
+}
+
+header .links .icon {
+  width: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+header .links .icon span {
+  background-color: var(--gray-color);
+  height: 2px;
+  margin-bottom: 5px;
+}
+
+header .links .icon span:first-child,
+header .links .icon span:last-child {
+  width: 100%;
+}
+
+header .links .icon span:nth-child(2) {
+  width: 50%;
+  transition: var(--transition-duration);
+}
+
+header .links ul {
+  content: "";
+  position: absolute;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: var(--secondary-color);
+  min-width: 200px;
+  right: 0;
+  top: calc(100% + 10px);
+  display: none;
+}
+
+header .links:hover ul {
+  display: block;
+}
+
+header .links ul::before {
+  content: "";
+  position: absolute;
+  border-width: 10px;
+  border-color: transparent transparent var(--secondary-color) transparent;
+  border-style: solid;
+  right: 5px;
+  top: -20px;
+}
+
+header .links ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  padding: 15px;
+  color: #fff;
+  transition: var(--transition-duration);
+}
+
+header .links ul li a:hover {
+  color: var(--main-color);
+  padding-left: 25px;
+  border-left: 5px solid var(--main-color);
+}
+
+header .links ul li:not(:last-child) a {
+  border-bottom: 1px solid #ddd;
+}
+/* End Header */
