--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,3 +380,96 @@ header .links ul li:not(:last-child) a {
   box-shadow: var(--secondary-color) 0 50px 0px 1px inset;
 }
 /* End Portfolio */
+
+/* Start About */
+.about {
+  padding: var(--p-y) 0;
+  padding-bottom: 120px;
+}
+
+.about .content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+@media (max-width: 991px) {
+  .about .content {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.about .content .image {
+  position: relative;
+  height: fit-content;
+}
+
+@media (max-width: 991px) {
+  .about content .image {
+    margin: 0 auto 60px;
+  }
+}
+
+.about content .image img {
+  max-width: 100%;
+}
+
+.about .content .image::before {
+  content: "";
+  position: absolute;
+  background-color: #ebeced;
+  width: 80px;
+  height: calc(100% + 80px);
+  top: -40px;
+  left: -20px;
+  z-index: -1;
+}
+
+.about .content .image::after {
+  content: "";
+  position: absolute;
+  width: 150px;
+  height: 200px;
+  border-left: 80px solid var(--main-color);
+  border-bottom: 80px solid var(--main-color);
+  top: -40px;
+  right: -180px;
+  z-index: -1;
+}
+
+@media (max-width: 991px) {
+  .about .content .image::before,
+  .about .content .image::after {
+    display: none;
+  }
+}
+
+.about .content .text {
+  flex-basis: 50%;
+}
+
+@media (max-width: 991px) {
+  .about .content .text {
+    text-align: center;
+  }
+}
+
+.about .content .text p:first-of-type {
+  font-weight: bold;
+  line-height: var(--space-height);
+  margin-bottom: 50px;
+}
+
+.about .content .text hr {
+  width: 50%;
+  display: inline-block;
+  border-color: var(--main-color);
+}
+
+.about .content .text p:last-of-type {
+  line-height: var(--space-height);
+  color: var(--gray-color);
+}
+/* End About */
