--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,3 +525,18 @@ header .links ul li:not(:last-child) a {
   cursor: pointer;
 }
 /* End Contact */
+
+/* Start Footer */
+footer {
+  padding: 30px 10px;
+  text-align: center;
+  background-color: var(--secondary-color);
+  color: #fff;
+  font-size: 18px;
+}
+
+footer span {
+  font-weight: 800;
+  color: var(--main-color);
+}
+/* End Footer */
